<?xml version="1.0" encoding="utf-8"?>
<resources>

<!-- Portugês -->
    <string name="app_name">MBroker</string>
    <string name="title_section3">Android Version</string>
    <string name="title_section2">Homes</string>
    <string name="title_section1">Clients</string>
    
    <!-- Botões -->
    <string name="addClientBt">Add Client</string>
    <string name="addHomeBt">Add Home</string>  
    <string name="addClient">Add a Client</string> 
    <string name="addHome">Add a Home</string>   
    <string name="save">Save</string>  
    <string name="delete">Delete</string> 
    <string name="edit">Edit</string> 
    
    <string name="gpsConfig">GPS Settings</string>
    <string name="gpsDisable">GPS disabled. Turn it on?</string>
    <string name="searching">Searching</string>
    <string name="searchingCoo">Getting coordinates</string>
    
    <string name="cancel">Cancel</string>
    <string name="sendEmail">Send E-mail?</string>
	<string name="call">Call</string>
    <string name="to">To:</string>      
    <string name="buy">Buy</string>      
    <string name="rent">Rent</string> 
    <string name="sell">Sell</string>
    <string name="sale">Sale</string>
    <string name="rentA">Rent</string>
    <string name="stName">Name</string>
    <string name="stPhone">Phone</string>
    <string name="stEmail">E-mail</string>
    <string name="stSolicit">Solicitation</string>
    <string name="address">Address</string>
    <string name="owner">Owner</string>
    <string name="rooms">Rooms:</string>
    <string name="house">House</string>
    <string name="apt">Apt.</string>
     <string name="select">Select</string>
     <string name="imageSelected">Image Selected</string>
     <string name="deleteRecord">Delete Record?</string>
    <string name="deleteHomeMsg">Delete home record?</string>
    <string name="deleteClientMsg">Delete client record?</string>
    <string name="description">Description</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MBroker</string>
    <string name="add_home">Adicionar Imóvel</string>
    <string name="add_client">Adicionar_Cliente</string>
    <string name="title_activity_testee"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_client"></string>
    <string name="title_activity_add_home"></string>
    <string name="title_activity_client"></string>
    <string name="title_activity_home"></string>
    

</resources>