<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddClient" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stName" />

            <EditText
                android:id="@+id/edtCNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/stTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stPhone" />

            <EditText
                android:id="@+id/edtCfone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/stEmailVi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stEmail" />

            <EditText
                android:id="@+id/edtCEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/stSolicitacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stSolicit" />

            <EditText
                android:id="@+id/edtCsolicit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <CheckBox
                android:id="@+id/cbxCComprar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy" />

            <CheckBox
                android:id="@+id/cbxCAlugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rent" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>