<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/addHomeScroll"
    tools:context=".AddHome" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_marginTop="10dp" >

            <ImageButton
                android:id="@+id/mainHome"
                android:layout_width="100dp"
                android:layout_height="106dp"
                android:background="@drawable/bt_gps"
                android:contentDescription="+"
                android:onClick="selectMainImage"
                android:src="@android:drawable/ic_menu_camera" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0.59"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cbxVenda"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sale"
                            android:textSize="12sp" />

                        <CheckBox
                            android:id="@+id/cbxAluguel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rent" 
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" >

                        <TextView
                            android:id="@+id/stQuartos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/rooms" />

                        <EditText
                            android:id="@+id/edtQuartos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number" 
                            android:maxLength="1">
							
                            <requestFocus />
                        </EditText>
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/stEndereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/address" />

                <Button
                    android:id="@+id/btGps"
                    android:layout_width="48dp"
                    android:layout_height="34dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="18dp"
                    android:background="@drawable/bt_gps"
                    android:onClick="getAddress"
                    android:text="GPS"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine|textPostalAddress" />

            <TextView
                android:id="@+id/stProprietario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/owner" />

            <EditText
                android:id="@+id/edtProprietario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp" >

                <RadioGroup
                    android:id="@+id/rgTipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal" 
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/rCasa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/house" />

                    <RadioButton
                        android:id="@+id/rApt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apt" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/stEmailVi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stEmail" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/clientAlugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stPhone" />

            <EditText
                android:id="@+id/edtFone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btRemoveImg"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/bt_redbk"
                    android:enabled="false"
                    android:onClick="removeImage"
                    android:text="  -Image  "
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bt_gps"
                    android:onClick="selectImage"
                    android:text="+Image"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/mygallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

</ScrollView>