<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClientActivity" >


        <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stName" />

            <TextView
                android:id="@+id/txtCNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/stTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stPhone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtCFone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageButton
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@android:drawable/ic_menu_call"
                    android:background="@drawable/bt_gps" 
                    android:onClick="callClient"
                    />



            </RelativeLayout>

            <TextView
                android:id="@+id/stEmailVi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stEmail" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/txtCemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />



                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:src="@android:drawable/ic_menu_send" 
                    android:onClick="sendEmailClient"
                    android:background="@drawable/bt_gps" />

            </RelativeLayout>

            <TextView
                android:id="@+id/stSolicitacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stSolicit" />

            <TextView
                android:id="@+id/txtCSolicit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtComprarAlugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>